2006-07-22    <tino@firebird.03.softkill.net>

	* sockbuf.h (tino_sockbuf_get, tino_sockbuf_fd): added

	* file.h (tino_file_blocking, tino_file_nonblock) 
	(tino_file_block): added

2006-07-21    <tino@firebird.03.softkill.net>

	* setuptino.sh: Thou shalt test thee! sigh .. the checkout process
	now works as expected.

2006-07-19    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_get_s_nonconst, tino_buf_get_nonconst): added

2006-07-17    <tino@firebird.03.softkill.net>

	* setuptino.sh: add tino/ directory to CVS

	* getopt.h (tino_getopt_var_to_str): added ' to character output

	* setuptino.sh: Checkout instead of copy, it gets tedious to
	cleanup after the copy always .. ;)

2006-06-17    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_adrname): IPv6 IPs are written in brackets
	like [aaaa:bbb::cc:d]:PORT for better compatibility

	* proc.h (tino_wait_child): Only use alarm(0) if timeout is set

	* sock.h (tino_sock_get_adrname, tino_sock_get_sockname): added

	* Makefile.proto (static): "make static" failed switching into
	static mode the first time

2006-06-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (install): typo corrected

2006-06-11    <tino@firebird.03.softkill.net>

	* Makefile.awk (#S): Added variable prefix

	* Makefile.proto (install): Rule added to process additional
	INSTALL* targets, also preset the PATHs

	* Makefile.tino.dist (INSTALL*): added

	* Makefile-diff.awk (END): 3 more cvs tag lines (doubled)

	* Makefile-tar.sh (exists): As preparation to public CVS access
	added general "dist-TOOL" tag.

2006-06-10    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_to_str): Buglet: If flag was inited to
	negative value its exceptional value was not explicitely printed.

2006-04-11    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_write_out): added

	* proc.h (tino_fd_keep): added
	(tino_fd_move): flipped args, be sure to look at the warnings!