@@ -19,7 +19,10 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * $Log$
- * Revision 1.7  2005-12-05 02:11:12  tino
+ * Revision 1.8  2006-07-22 17:41:21  tino
+ * See ChangeLog
+ *
+ * Revision 1.7  2005/12/05 02:11:12  tino
  * Copyright and COPYLEFT added
  *
  * Revision 1.6  2005/08/02 04:44:41  tino
@@ -44,6 +47,7 @@
 #ifndef tino_INC_filetool_h
 #define tino_INC_filetool_h
 
+#include "file.h"
 #include "fatal.h"
 #include "alloc.h"
 #include "str.h"
@@ -53,6 +57,25 @@
 #define	DRIVE_SEP_CHAR	0	/* untested	*/
 #define	PATH_SEP_CHAR	'/'
 
+/* Most of the functions below which return char *
+ * guarantee to return a buffer which is at least max
+ * bytes long.  This routine creates such a buffer.
+ *
+ * To alloc the buffer as tight as possible just give
+ * buf=0 and max=0
+ *
+ * ELSE THE RESULT CAN BE TRUNCATED, YOU HAVE BEEN WARNED!
+ */
+static void
+tino_file_gluebuffer(char **buf, size_t *max, size_t min)
+{
+  if (!*buf)
+    {
+      if (*max<min)
+        *max	= min;
+      *buf	= (char *)tino_alloc(*max);
+    }
+}
 
 /* Glue some path and name together.
  * If buffer is NULL it is allocated.
@@ -73,12 +96,7 @@ tino_file_glue_path(char *buf, size_t max, const char *path, const char *name)
   int		offset;
   size_t	len;
 
-  if (!buf)
-    {
-      if (max<BUFSIZ)
-	max	= BUFSIZ;
-      buf	= (char *)tino_alloc(max);
-    }
+  tino_file_gluebuffer(&buf, &max, BUFSIZ);
 
   offset	= 0;
 #if DRIVE_SEP_CHAR
@@ -146,12 +164,7 @@ tino_file_dirname(char *buf, size_t max, const char *name)
   int	offset;
 
   offset	= tino_file_dirfileoffset(name, 0);
-  if (!buf)
-    {
-      if (max<BUFSIZ)
-	max	= offset+1;
-      buf	= (char *)tino_alloc(max);
-    }
+  tino_file_gluebuffer(&buf, &max, offset+1);
   if (max>offset)
     max	= offset+1;
   return tino_strxcpy(buf, name, max);
@@ -163,12 +176,7 @@ tino_file_filename(char *buf, size_t max, const char *name)
   int		offset;
 
   offset	= tino_file_dirfileoffset(name, 1);
-  if (!buf)
-    {
-      if (max<BUFSIZ)
-	max	= strlen(name+offset)+1;
-      buf	= (char *)tino_alloc(max);
-    }
+  tino_file_gluebuffer(&buf, &max, strlen(name+offset)+1);
   return tino_strxcpy(buf, name+offset, max);
 }
 
@@ -176,6 +184,78 @@ static const char *
 tino_file_filenameptr(const char *path)
 {
   return path+tino_file_dirfileoffset(path, 1);
+}
+
+/* Create a backup filename
+ * This is "name.~#~" where # is something starting at 1
+ * It is guaranteed that this name does not exist (except for
+ * race conditions).
+ *
+ * As I always handle hundreds of thousands of files
+ * this must have O(ld(n)) complexity to find a free name.
+ */
+static char *
+tino_file_backupname(char *buf, size_t max, const char *name)
+{
+  int		i, lower, upper;
+  char		tmp[10];
+  size_t	len;
+
+  len	= strlen(name);
+  tino_file_gluebuffer(&buf, &max, len+sizeof tmp);
+  tino_strxcpy(buf, name, max);
+
+  lower	= 1;	/* this always is a used slot + 1	*/
+  upper	= 1;	/* this always is an unused slot	*/
+  i	= 1;
+  for (;;)
+    {
+      snprintf(tmp, sizeof tmp, ".~%d~", i);
+      if (max<len)
+	tino_strxcpy(buf+len, tmp, max-len);
+      if (tino_file_notexists(buf))
+	{
+	  /* We have a hole.
+           * But perhaps we have skipped a lot
+	   */
+	  if (lower>=i)
+	    break;
+	  upper	= i;
+	  /* as lower<i and upper==i now
+	   * we know that lower <= i < upper
+	   * So there must be progress.
+	   */
+	  i	= (upper+lower)/2;
+	  continue;
+	}
+      /* Search quadratic
+       * We have a used slot
+       */
+      lower	= i+1;
+      if (lower>upper)
+	{
+	  /* Upper points to an used slot,
+	   * so increase it quadratic!
+	   * i>=1, so upper=i+i >= lower=i+1
+	   */
+	  i	+= i;
+	  upper	= i;
+
+	  /* However if the current number already did not fit
+	   * in the buffer, this cannot change anything in future.
+	   * So bail out.
+	   */
+	  if (len+strlen(tmp)>=max)
+	    return 0;
+	  continue;
+	}
+      /* as lower==i+1 and i<upper
+       * we know that lower <= i < upper
+       * so there must be progress.
+       */
+      i	= (upper+lower)/2;
+    }
+  return buf;
 }
 
 #ifdef TINO_TEST_UNIT
