@@ -1,5 +1,12 @@
 2006-07-22    <tino@firebird.03.softkill.net>
 
+	* filetool.h (tino_file_gluebuffer): added
+	(tino_file_glue_path, tino_file_dirname, tino_file_filename): now
+	uses tino_file_gluebuffer
+	(tino_file_dirname, tino_file_filename): bugs removed by
+	tino_file_gluebuffer
+	(tino_file_backupname): added
+
 	* sockbuf.h (tino_sockbuf_get, tino_sockbuf_fd): added
 
 	* file.h (tino_file_blocking, tino_file_nonblock) 
